--- a/index.html
+++ b/index.html
@@ -4,26 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Letter</title>
 </head>
 <body>
     <h4> Miss Eileen Dover </h4>
 
-        <div> 4321 Cliff Top Edge </div>  
-        <div> Dover,CT9 XXX </div>
-        <div> UK </div>
+    <div> 4321 Cliff Top Edge </div>  
+    <div> Dover,CT9 XXX </div>
+    <div> UK </div>
          
     <h2> Re:Eileen Dover university application </h2>
 
         <P> Dear Eileen, </P>
-        <p> Thank you for your recent application to join us at the University of Awesome's science to study as part of your
+        <p> 
+            Thank you for your recent application to join us at the University of Awesome's science to study as part of your
            <abbr title="Doctor of Philosophy"> PhD </abbr> 
             next year. I will answer your questions one by one, in the following sections.
         </p>
 
     <h3> Starting dates </h3>
 
-        <p> We are happy to accomodate you starting your study with us at any time, 
+        <p> 
+            We are happy to accomodate you starting your study with us at any time, 
             however it suit us better if you could start at the beginning of a semester;
             the start dates for each one are as follows:
         </p>
@@ -32,14 +34,15 @@
             <li> Second semester: 15 January 2017 </li>
             <li> Third semester: 2 May 2017 </li>
         </ul>
-        <div> Please let me know if this is ok,and if so which start date you would prefer. </div>
-        <div> You can find more information about 
-            <a href="http://example.com/" target="_blank"> important university dates on our website. </a> 
-        </div> 
+    <div> Please let me know if this is ok,and if so which start date you would prefer. </div>
+    <div> You can find more information about 
+          <a href="http://example.com/" target="_blank"> important university dates on our website. </a> 
+    </div> 
 
     <h3> Subjects of study </h3>
 
-        <p> At the Awesome Science Faculty,we have a pretty open-minder research facility &mdash; 
+        <p> 
+            At the Awesome Science Faculty,we have a pretty open-minder research facility &mdash; 
             as long as the subjects fall somewhere in the realm of science and technology.
             You seem like an intelligent, dedicated research, and just the kind of person we'd like to have on our team. 
             Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority: 
@@ -52,53 +55,57 @@
             <li> <abbr title="HyperText Markup Language"> HTML </abbr> add <abbr title="Cascading Style Sheets"> CSS </abbr> 
                  constructs for representing musical scores. </li>
         </ol>
-        <p> So please can you provide more information on each of these subjects, 
+        <p> 
+            So please can you provide more information on each of these subjects, 
             including how long you'd expect the research to take, requierd staff and other resources,
             and anything else you think we'd need to know ? Thanks.
         </p>
 
     <h3> Exotic dance moves </h3>
 
-        <p> Yes, you are right! As partt of my post-doctorate work, I <em> did </em> study exotic tribal dances. 
+        <p> 
+            Yes, you are right! As partt of my post-doctorate work, I <em> did </em> study exotic tribal dances. 
             To answer your question, my favourite dances are as follows, with definitions: 
         </p>
         <dl>
             <dt> Polynesian chicken dance </dt>
-                <dd> A little known but <em> very </em> influential dance dating back as far as 300 
+            <dd> A little known but <em> very </em> influential dance dating back as far as 300 
                      <abbr title=" Before Christ "> BC </abbr> ,
                      whole village would dance around in a circle like chicken, to encourage their livestock or be "fruitful". 
-                </dd>
+            </dd>
             <dt> Icelandic brownian shuffle </dt>
-                <dd> Before the Icelanders developed fire as a means of getting warm, 
+            <dd> Before the Icelanders developed fire as a means of getting warm, 
                      they used to practice this dance, which involved huddling close together in a circle on the floor, 
                      and shuffling their bodies around in imperceptably tiny, very rapid movements. 
                      One of my fellow students used to say that he thought this dance inspired modern styles such as Twerking.
-                </dd>
+            </dd>
             <dt> Artic robot dance </dt>
-                <dd> An interesting example of historic misinformation, 
+            <dd> An interesting example of historic misinformation, 
                      English explorers in the 1960s believed to have discovered a new dance style characterised by "robotic", 
                      stilted movements, being practiced by inhabitants of Northern Alaska and Canada. 
-                     Later on however it was discovered that were just moving like this because they were really cold. </dd>
+                     Later on however it was discovered that were just moving like this because they were really cold. 
+            </dd>
             <dt> Music </dt>
-                <dd>
+            <dd>
                     <audio controls >
                       <source scr="https://drive.google.com/uc?id=1bvQrZjwKC3lx1z-Y0Csr2FeECmhiMqb_" type="audio/mp3">
                       <source scr="https://drive.google.com/uc?id=1RaHxwAph1GN5h8e7SHz3oUgAqzpDTHFN" type="audio/ogg">
                     </audio>     
-                </dd> 
+            </dd> 
             <dt> Video </dt>
-                <dd>
+            <dd>
                     <video width="340" height="240" controls>
-                    <source src="https://archive.org/download/BigBuckBunny_124/Content/big_buck_bunny_720p_surround.mp4" type="video/mp4">    
+                      <source src="https://archive.org/download/BigBuckBunny_124/Content/big_buck_bunny_720p_surround.mp4" type="video/mp4">    
                     </video>
-                </dd>
+            </dd>
         </dl>
         <div> For more of my research, see my <a href="http://example.com/" target="_blank"> exotic dance research page. </a></div>
         <p> Yours sincerely, </p>
         <br>
         <br>
-        <p>Dr. Eleanor Gaye</p>
-        <p> University of Awesome motto: "Be awesome to each other." 
+        <p> Dr. Eleanor Gaye </p>
+        <p> 
+           University of Awesome motto: "Be awesome to each other." 
            <em> --Bill S Preston,<abbr title="Esquire"> Esq </abbr> </em> 
         </p>
 </body>
