--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <br>
         <p> Dr. Eleanor Gaye </p>
         <p> 
-           University of Awesome motto: "Be awesome to each other." 
+           University of Awesome motto: <q> Be awesome to each other. </q> 
            <em> --Bill S Preston,<abbr title="Esquire"> Esq </abbr> </em> 
         </p>
 </body>
